b=304561, firefox unsuitable for browsing high-res image galleries due to preview on tab icon, r=mconnor,sr=bzbarsky,a=asa